Fixed the issues : 1. Saving the edited content. 2. Aligning the part A buttons div vertically and horizontally centre. 3. Corrected the color of comment button.

--- a/styles/common.css
+++ b/styles/common.css
@@ -43,10 +43,10 @@ nav {
     text-align: center;
     margin-top: 2%;
 }
-.posts-div {
+/*.posts-div {
     text-align: center;
     margin-top: 20%;
-}
+}*/
 .posts-div button {
     color: #000;
     border-radius: 0;
