--- a/styles/index.css
+++ b/styles/index.css
@@ -8,3 +8,15 @@ body, html {
 #create-form input, #create-form textarea {
     background-color: #f4f4f4;
 }
+.posts-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    /* left: 46%; */
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 100%;
+}
